//  Copyright Â© 2023 Aircore.  All rights reserved.
syntax = "proto3";

import "google/protobuf/any.proto";

message TagDataEnvelope {
  string tag_name = 1; // name of the tag
  string sequence_number = 2; // sequence number of the tag
  google.protobuf.Any data = 3; // data of the tag
}

message TagDataSnapshot {
  map<string, TagDataEnvelope> snapshot = 1; // map of tag data objects, keyed by name
  optional string sequence_number = 2;  // sequence number of the snapshot
}
